# feetech-servo-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  basic_receive_commands.py  basic_send_commands.py  feetech_utils.py  ips.txt  pyproject.toml  read_leader_positions.py  receive_positions.py  requirements-dev.txt  requirements.txt  run_tests.sh  send_commands.py  set_middle_position.py  sf-mfg-instructions.txt
dev-example/: README.md
dev-example/hls/: ofscal.py  ping.py  read.py  read_write.py  reset.py  sync_read.py
dev-example/scscl/: read.py  write.py
dev-example/sms_sts/: read.py  reg_write.py  sync_write.py  write.py
dev-example/sts/: wheel.py
docs/: README.md
docs/reference/: scs_communication_protocol.md
docs/reference/memory_tables/: EXAMPLE_sts_memory_table.md  README.md  hls_memory_table.md  sts_memory_table.md
examples/: README.md  __init__.py  basic_usage.py  calibrate_middle_position.py  change_servo_id.py  continuous_reading.py  list_ports.py  phase_control.py  position_control.py  read_positions.py  read_voltage.py  servo_types.py  set_middle_position.py  set_middle_position_sts6dof.py  teleoperation.py  teleoperation_sts6dof.py  torque_control.py
examples/official_feetech/: README_OFFICIAL.md
examples/official_feetech/hls/: reg_write.py  sync_write.py  wheel.py  write.py
examples/official_feetech/scscl/: ping.py  read_write.py  reg_write.py  sync_write.py  wheel.py
tests/: __init__.py  conftest.py  test_cli.py  test_controller.py  test_reader.py
vassar-feetech-servo-sdk/: .gitignore  MANIFEST.in  PACKAGE_STRUCTURE.md  PYPI_PUBLISHING_GUIDE.md  QUICKSTART.md  README.md  build_and_install.sh  pyproject.toml  setup.py
vassar-feetech-servo-sdk/examples/: basic_usage.py  continuous_reading.py  servo_types.py
vassar-feetech-servo-sdk/tests/: test_reader.py
vassar-feetech-servo-sdk/vassar_feetech_servo_sdk/: __init__.py  __main__.py  cli.py  exceptions.py  reader.py
vassar_feetech_servo_sdk/: __init__.py  cli.py  controller.py  exceptions.py  reader.py
(+3 files in other folders)
